fixing tech stack format on mobile

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -72,7 +72,13 @@
 
 @media only screen and (max-width: 1500px) {
   .card {
+    justify-content: center;
     height: 590px;
+  }
+}
+@media only screen and (max-width: 1500px) {
+  .techs {
+    height: 20px;
   }
 }
 
